package com.taskmanagement.command;


public interface Command {

    void execute();
}