package com.taskmanagement.domain;

/**
 * Represents a senior level collaborator
 */
public class Senior extends Collaborator {

    public Senior() {
        super();
    }

    public Senior(String name) {
        super(name);
    }
}